Multiselect beim Entfernen von FilterEntries Layoutverbesserungen

--- a/Moviekus/Moviekus/Views/Controls/NullableDatePicker.xaml
+++ b/Moviekus/Moviekus/Views/Controls/NullableDatePicker.xaml
@@ -12,7 +12,7 @@
 
                 <StackLayout Orientation="Horizontal">
                     <DatePicker x:Name="datePickerFrom" Date="{Binding DateFrom}" DateSelected="OnDateFromSelected" Format="d" HorizontalOptions="Start" />
-                    <Label x:Name="lblTo" Text="und" />
+                    <Label x:Name="lblTo" Text="und" VerticalOptions="Center" Margin="5,0,5,0"/>
                     <DatePicker x:Name="datePickerTo" Date="{Binding DateTo}" DateSelected="OnDateToSelected" Format="d" HorizontalOptions="Start" />
                 </StackLayout>
 
