--- a/Moviekus/Moviekus/Views/Filter/FilterEntryEntryCellTemplate.xaml
+++ b/Moviekus/Moviekus/Views/Filter/FilterEntryEntryCellTemplate.xaml
@@ -8,10 +8,12 @@
   <ViewCell.View>
       <StackLayout Padding="5">
             <StackLayout Orientation="Horizontal">
+                <CheckBox IsChecked="{Binding IsSelected}" HorizontalOptions="Start"/>
                 <Picker 
                     FontSize="Small"
                     ItemsSource="{Binding Operators}"
                     ItemDisplayBinding="{Binding OperatorName}"
+                    WidthRequest="120" 
                     SelectedItem="{Binding SelectedOperator, Mode=TwoWay}"/>
                 <Entry Text="{Binding FilterEntry.ValueFrom}" HorizontalOptions="FillAndExpand" />
             </StackLayout>
