--- a/Moviekus/Moviekus/Views/Filter/FilterEntrySourceCellTemplate.xaml
+++ b/Moviekus/Moviekus/Views/Filter/FilterEntrySourceCellTemplate.xaml
@@ -8,14 +8,17 @@
   <ViewCell.View>
         <StackLayout Padding="5">
             <StackLayout Orientation="Horizontal">
+                <CheckBox IsChecked="{Binding IsSelected}" HorizontalOptions="Start"/>
                 <Picker 
                     FontSize="Small"
                     ItemsSource="{Binding Operators}"
                     ItemDisplayBinding="{Binding OperatorName}"
+                    WidthRequest="120"
                     SelectedItem="{Binding SelectedOperator, Mode=TwoWay}"/>
                 <Picker FontSize="Small"
                     ItemsSource="{Binding Sources}"
-                    ItemDisplayBinding="{Binding Name}"                     
+                    ItemDisplayBinding="{Binding Name}"           
+                    HorizontalOptions="FillAndExpand"
                     SelectedItem="{Binding Source, Mode=TwoWay}"/>
             </StackLayout>
         </StackLayout>
