Darstellungskorrektur für Datumsfilter

--- a/Moviekus/Moviekus/Views/Filter/FilterDetailPage.xaml
+++ b/Moviekus/Moviekus/Views/Filter/FilterDetailPage.xaml
@@ -33,8 +33,7 @@
                 VerticalOptions="FillAndExpand"
                 HasUnevenRows="true"
                 Margin="10,10,10,10"
-                ItemTemplate="{StaticResource FilterEntryDataTemplateSelector}"
-                SelectedItem="{Binding SelectedFilterEntry}">
+                ItemTemplate="{StaticResource FilterEntryDataTemplateSelector}">
 
                     <ListView.GroupHeaderTemplate>
                         <DataTemplate>
