--- a/Moviekus/Moviekus/App.xaml
+++ b/Moviekus/Moviekus/App.xaml
@@ -36,13 +36,13 @@
                 <Setter Property="HorizontalOptions" Value="Center" />
             </Style>
             <Style x:Key="CoverImageStyle" TargetType="Image">
-                <Setter Property="VerticalOptions" Value="Center" />
-                <Setter Property="HorizontalOptions" Value="Center" />
+                <Setter Property="VerticalOptions" Value="CenterAndExpand" />
+                <Setter Property="HorizontalOptions" Value="CenterAndExpand" />
                 <Setter Property="WidthRequest" Value="120" />
                 <Setter Property="HeightRequest" Value="140" />
-                <Setter Property="Aspect" Value="AspectFill" />
-                <Setter Property="HorizontalOptions" Value="FillAndExpand" />
-                <Setter Property="VerticalOptions" Value="FillAndExpand" />
+                <Setter Property="Aspect" Value="Fill" />
+                <Setter Property="HorizontalOptions" Value="CenterAndExpand" />
+                <Setter Property="VerticalOptions" Value="CenterAndExpand" />
                 <Setter Property="Margin" Value="0,10,0,10" />
             </Style>
 
