--- a/Moviekus/Moviekus/Views/Movies/MovieDetailPage.xaml
+++ b/Moviekus/Moviekus/Views/Movies/MovieDetailPage.xaml
@@ -75,7 +75,7 @@
             <Label Text="{Binding Movie.Description}" TextColor="#7e90a8" FontAttributes="Italic" FontSize="Small"/>
 
             <Label Text="Bemerkungen:" Style="{StaticResource HeadingLabelStyle}" />
-            <Label Text="{Binding Movie.Remarks}" FontSize="Small"/>
+            <Label Text="{Binding Movie.Remarks}" TextColor="#7e90a8" FontSize="Small"/>
 
         </StackLayout>
     </ScrollView>
