--- a/Moviekus/Moviekus/Views/Movies/MovieEditPage.xaml
+++ b/Moviekus/Moviekus/Views/Movies/MovieEditPage.xaml
@@ -57,8 +57,8 @@
                     SelectedItem="{Binding SelectedSource, Mode=TwoWay}"/>
 
                 <Label Text="Bemerkungen" Style="{StaticResource HeadingLabelStyle}" />
-                <Entry Text="{Binding Movie.Remarks}" d:Text="Eigene Kommentare zu diesem Film" FontSize="Small" />
-
+                <Editor Text="{Binding Movie.Remarks}" d:Text="Eigene Kommentare zu diesem Film" HeightRequest="120" FontSize="Small" AutoSize="TextChanges" />
+                
                 <Label Text="Homepage" Style="{StaticResource HeadingLabelStyle}" />
                 <Entry Text="{Binding Movie.Homepage}" d:Text="Adresse der Webseite zum Film" FontSize="Small" />
 
