--- a/Moviekus/Moviekus/Views/Movies/MoviesPage.xaml
+++ b/Moviekus/Moviekus/Views/Movies/MoviesPage.xaml
@@ -12,6 +12,7 @@
 
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Neu" Command="{Binding AddMovieCommand}" IconImageSource="addnew.png"/>
+        <ToolbarItem Text="Suche" Command="{Binding SearchCommand}" IconImageSource="search.png"/>
         <ToolbarItem Text="Filter" Command="{Binding FilterCommand}" Order="Secondary" IconImageSource="filter.png"/>
         <ToolbarItem Text="Sortierung" Command="{Binding OrderCommand}" Order="Secondary" IconImageSource="sorting.png" />
         <ToolbarItem Text="OneDrive" Command="{Binding OneDriveCommand}" Order="Secondary" IconImageSource="onedrive.png"/>
