--- a/Moviekus/Moviekus/Views/Movies/MoviesPage.xaml
+++ b/Moviekus/Moviekus/Views/Movies/MoviesPage.xaml
@@ -54,7 +54,7 @@
                                         StarSize="20"
                                         Rating ="{Binding Movie.Rating}" />
                                 <Label Text="{Binding SubTitle}" TextColor="#7e90a8" FontAttributes="Italic" FontSize="Subtitle"/>
-                                <Label Text="{Binding Movie.Description}" MaxLines="6" FontSize="Micro"/>
+                                <Label Text="{Binding Movie.Description}" MaxLines="6" FontSize="Small"/>
                             </StackLayout>
                         </Grid>
                     </ViewCell>
