Designverbesserungen an den generierten Seiten

--- a/Moviekus/Moviekus.Web/Pages/Genres/Create.cshtml
+++ b/Moviekus/Moviekus.Web/Pages/Genres/Create.cshtml
@@ -5,7 +5,12 @@
     ViewData["Title"] = "Genre anlegen";
 }
 
-<h1>Neues Genre</h1>
+    <table>
+        <tr>
+            <td style="padding-right:10px;"><img src="~/images/genres.png" style="width:48px;height:48px;"></td>
+            <td><h1>Neues Genre</h1></td>
+        </tr>        
+    </table>
 
 <hr />
 <div class="row">
