--- a/Moviekus/Moviekus.Web/Pages/Genres/Edit.cshtml
+++ b/Moviekus/Moviekus.Web/Pages/Genres/Edit.cshtml
@@ -5,7 +5,12 @@
     ViewData["Title"] = "Genre bearbeiten";
 }
 
-<h1>Genre bearbeiten</h1>
+<table>
+    <tr>
+        <td style="padding-right:10px;"><img src="~/images/genres.png" style="width:48px;height:48px;"></td>
+        <td><h1>Genre bearbeiten</h1></td>
+    </tr>
+</table>
 
 <h4>Genre</h4>
 <hr />
