--- a/Moviekus/Moviekus.Web/Pages/Settings.cshtml
+++ b/Moviekus/Moviekus.Web/Pages/Settings.cshtml
@@ -3,7 +3,14 @@
 @{
     ViewData["Title"] = "Einstellungen";
 }
-<h1>@ViewData["Title"]</h1>
+
+
+<table>
+    <tr>
+        <td style="padding-right:15px;"><img src="~/images/settings.png" style="width:48px;height:48px;"></td>
+        <td><h1>@ViewData["Title"]</h1></td>
+    </tr>
+</table>
 
 <hr />
 <div class="row">
