--- a/Moviekus/Moviekus.Web/Pages/Sources/Create.cshtml
+++ b/Moviekus/Moviekus.Web/Pages/Sources/Create.cshtml
@@ -5,7 +5,13 @@
     ViewData["Title"] = "Neue Quelle";
 }
 
-<h1>Neue Quelle</h1>
+<table>
+    <tr>
+        <td style="padding-right:10px;"><img src="~/images/sources.png" style="width:48px;height:48px;"></td>
+        <td><h1>Neue Quelle</h1></td>
+    </tr>
+</table>
+
 
 <hr />
 <div class="row">
