--- a/Moviekus/Moviekus.Web/Pages/Sources/Details.cshtml
+++ b/Moviekus/Moviekus.Web/Pages/Sources/Details.cshtml
@@ -5,7 +5,12 @@
     ViewData["Title"] = "Quelle";
 }
 
-<h1>Quelle</h1>
+<table>
+    <tr>
+        <td style="padding-right:10px;"><img src="~/images/sources.png" style="width:48px;height:48px;"></td>
+        <td><h1>Quelle-Details</h1></td>
+    </tr>
+</table>
 
 <div>
     <h4>Quelle</h4>
