--- a/Moviekus/Moviekus.Web/Pages/Sources/Edit.cshtml
+++ b/Moviekus/Moviekus.Web/Pages/Sources/Edit.cshtml
@@ -5,7 +5,13 @@
     ViewData["Title"] = "Quelle bearbeiten";
 }
 
-<h1>Quelle bearbeiten</h1>
+<table>
+    <tr>
+        <td style="padding-right:10px;"><img src="~/images/sources.png" style="width:48px;height:48px;"></td>
+        <td><h1>Quelle bearbeiten</h1></td>
+    </tr>
+</table>
+
 
 <h4>Quelle</h4>
 <hr />
