--- a/Moviekus/Moviekus.Web/Pages/Genres/Delete.cshtml
+++ b/Moviekus/Moviekus.Web/Pages/Genres/Delete.cshtml
@@ -5,7 +5,13 @@
     ViewData["Title"] = "Genre löschen";
 }
 
-<h1>Genre löschen</h1>
+<table>
+    <tr>
+        <td style="padding-right:10px;"><img src="~/images/genres.png" style="width:48px;height:48px;"></td>
+        <td><h1>Genre löschen</h1></td>
+    </tr>
+</table>
+
 
 <h3>Möchten Sie dieses Genre wirklich löschen?</h3>
 <div>
@@ -19,7 +25,7 @@
             @Html.DisplayFor(model => model.Genre.Name)
         </dd>
     </dl>
-    
+
     <form method="post">
         <input type="hidden" asp-for="Genre.Id" />
         <input type="submit" value="Löschen" class="btn btn-danger" /> |
