--- a/Moviekus/Moviekus.Web/Pages/Genres/Details.cshtml
+++ b/Moviekus/Moviekus.Web/Pages/Genres/Details.cshtml
@@ -5,7 +5,12 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<table>
+    <tr>
+        <td style="padding-right:10px;"><img src="~/images/genres.png" style="width:48px;height:48px;"></td>
+        <td><h1>Genre-Details</h1></td>
+    </tr>
+</table>
 
 <div>
     <h4>Genre</h4>
