--- a/Moviekus/Moviekus.Web/Pages/Shared/_Layout.cshtml
+++ b/Moviekus/Moviekus.Web/Pages/Shared/_Layout.cshtml
@@ -11,7 +11,12 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Moviekus.Web</a>
+                <table>
+                    <tr>
+                        <td style="padding-right:10px;"><img src="~/images/moviekus.png" style="width:32px;height:32px;" title="Movikus"></td>
+                        <td style="padding-right:15px"><a class="navbar-brand" asp-area="" asp-page="/Index">Moviekus.Web</a></td>
+                    </tr>
+                </table>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -19,21 +24,45 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Filme</a>
+                            <table>
+                                <tr>
+                                    <td style="padding-right:1px;"><img src="~/images/movie.png" style="width:24px;height:24px;" title="Filme"></td>
+                                    <td style="padding-right:15px"><a class="nav-link text-dark" asp-area="" asp-page="/Index">Filme</a></td>
+                                </tr>
+                            </table>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Genres/Index">Genres</a>
+                            <table>
+                                <tr>
+                                    <td style="padding-right:1px;"><img src="~/images/genres.png" style="width:24px;height:24px;" title="Genres"></td>
+                                    <td style="padding-right:15px"><a class="nav-link text-dark" asp-area="" asp-page="/Genres/Index">Genres</a></td>
+                                </tr>
+                            </table>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Sources/Index">Quellen</a>
+                            <table>
+                                <tr>
+                                    <td style="padding-right:1px;"><img src="~/images/sources.png" style="width:24px;height:24px;" title="Quellen"></td>
+                                    <td style="padding-right:15px"><a class="nav-link text-dark" asp-area="" asp-page="/Sources/Index">Quellen</a></td>
+                                </tr>
+                            </table>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Filter/Index">Filter</a>
+                            <table>
+                                <tr>
+                                    <td style="padding-right:1px;"><img src="~/images/filter.png" style="width:24px;height:24px;" title="Filter"></td>
+                                    <td style="padding-right:15px"><a class="nav-link text-dark" asp-area="" asp-page="/Filter/Index">Filter</a></td>
+                                </tr>
+                            </table>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Settings">Einstellungen</a>
+                            <table>
+                                <tr>
+                                    <td style="padding-right:1px;"><img src="~/images/settings.png" style="width:24px;height:24px;" title="Einstellungen"></td>
+                                    <td style="padding-right:15px"><a class="nav-link text-dark" asp-area="" asp-page="/Settings">Einstellungen</a></td>
+                                </tr>
+                            </table>
                         </li>
-
                     </ul>
                 </div>
             </div>
