--- a/Moviekus/Moviekus.Web/Pages/Sources/Delete.cshtml
+++ b/Moviekus/Moviekus.Web/Pages/Sources/Delete.cshtml
@@ -5,7 +5,12 @@
     ViewData["Title"] = "Quelle löschen";
 }
 
-<h1>Quelle löschen</h1>
+<table>
+    <tr>
+        <td style="padding-right:10px;"><img src="~/images/sources.png" style="width:48px;height:48px;"></td>
+        <td><h1>Quelle löschen</h1></td>
+    </tr>
+</table>
 
 <h3>Möchten Sie diese Quelle wirklich löschen?</h3>
 <div>
@@ -19,7 +24,7 @@
             @Html.DisplayFor(model => model.Source.Name)
         </dd>
     </dl>
-    
+
     <form method="post">
         <input type="hidden" asp-for="Source.Id" />
         <input type="submit" value="Löschen" class="btn btn-danger" /> |
