Index-Seite für Movies angelegt

--- a/Moviekus/Moviekus.Web/Pages/Shared/_Layout.cshtml
+++ b/Moviekus/Moviekus.Web/Pages/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
                 <table>
                     <tr>
                         <td style="padding-right:10px;"><img src="~/images/moviekus.png" style="width:32px;height:32px;" title="Movikus"></td>
-                        <td style="padding-right:15px"><a class="navbar-brand" asp-area="" asp-page="/Index">Moviekus.Web</a></td>
+                        <td style="padding-right:15px"><a class="navbar-brand" asp-area="" asp-page="/Movies/Index">Moviekus.Web</a></td>
                     </tr>
                 </table>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -27,7 +27,7 @@
                             <table>
                                 <tr>
                                     <td style="padding-right:1px;"><img src="~/images/movie.png" style="width:24px;height:24px;" title="Filme"></td>
-                                    <td style="padding-right:15px"><a class="nav-link text-dark" asp-area="" asp-page="/Index">Filme</a></td>
+                                    <td style="padding-right:15px"><a class="nav-link text-dark" asp-area="" asp-page="/Movies/Index">Filme</a></td>
                                 </tr>
                             </table>
                         </li>
