--- a/Moviekus/Moviekus.Web/Pages/Sources/Index.cshtml
+++ b/Moviekus/Moviekus.Web/Pages/Sources/Index.cshtml
@@ -25,13 +25,13 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Source[0].Name)
+                @Html.DisplayNameFor(model => model.Sources[0].Name)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model.Source)
+        @foreach (var item in Model.Sources)
         {
             <tr>
                 <td>
